- [core] improved the changelog UI by fixing the issue where the changelog collapse inward when overflow

--- a/src/renderer/components/weekView/currentWeek.css
+++ b/src/renderer/components/weekView/currentWeek.css
@@ -13,6 +13,13 @@
   gap: 12px;
 }
 
+.cwGrid {
+  flex: 1;
+  display: grid;
+  grid-template-columns: 1fr; /* only using right side */
+  min-height: 0; /* this is important, otherwise will collapse inward when too short */
+}
+
 /* ---- Drawer base ---- */
 .drRoot {
   border-radius: 14px;
@@ -217,6 +224,8 @@
 /* right column must be scrollable */
 .cwRight {
   min-height: 0;
+  padding-right: 8px; /* save some space for scroll bar */
+  overflow-y: auto;
 }
 .cwAccordion {
   display: flex;
@@ -224,7 +233,9 @@
   gap: 12px;
   overflow: auto;
   padding-right: 6px;
-  max-height: calc(100vh - 180px); /* can adjust height acc to app shell */
+  /* used to be a max-height: calc(100vh - 180px), removed because it enforce
+    to collapse inward when overflow
+  */
 }
 
 .cwDayMeta {
